--- a/Ressources/home.html
+++ b/Ressources/home.html
@@ -14,7 +14,7 @@
     <input
       type="button"
       value="GO"
-      onclick="afficheLaby();"
+      onclick="update();"
     /><br /><br /><br />
 
     <!-- ajouter vos boutons de déplacement ici -->
