--- a/Ressources/home.html
+++ b/Ressources/home.html
@@ -19,7 +19,7 @@
     <input
       type="button"
       value="GO"
-      onclick="update();"
+      onclick="update()"
     /><br /><br /><br />
 
     <!-- ajouter vos boutons de déplacement ici -->
